HUDF-967: Fix word wrap in applicable places, realign call control button text and record circle in button

--- a/FJSHUD/app/styles/notification.less
+++ b/FJSHUD/app/styles/notification.less
@@ -60,8 +60,14 @@
         padding-right: 10px;
         -ms-word-wrap: break-word;
         white-space:normal;
-        word-break: break-all;
-
+        // word-break: break-all;
+        overflow-wrap:  break-word;
+        word-wrap:  break-word;
+        word-break: break-word;
+        -ms-hyphens: auto;
+        -moz-hyphens: auto;
+        -webkit-hypens: auto;
+        hypens: auto;
 		p{
 			font-size:13px;
 		}
